<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity"
    android:layerType="software">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/claveTransaccional"
            android:textAppearance="@style/confirmTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtConfirmacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:paddingTop="20dp"
                android:text="@string/claveparagraph" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="start|fill|top|left"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/dashed_line"
            android:digits="0123456789"
            android:ems="8"
            android:gravity="left"
            android:inputType="number"
            android:maxLines="1"

            android:textAppearance="@style/confirmText">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/solicitar_nueva_clave"
            android:textAppearance="@style/optionalTitle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>