<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongratulationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pacifiCard"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            app:srcCompat="@drawable/congratulation" />

        <TextView
            android:id="@+id/txtCongratulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/felicidades"
            android:textAppearance="@style/finalTitle" />

        <TextView
            android:id="@+id/as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/es_un_placer_tenerte_como_cliente"
            android:textAppearance="@style/finalparr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:tint="#FFFFFF"
                    app:srcCompat="@drawable/ic_mail_outline_black_100dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/hemos_enviado_un_correo_a_givaregpar_gmail_com_para_que_conozcas_todos_los_beneficios_de_tu_tarjeta"
                    android:textAppearance="@style/finalparr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_location_on_black_100dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/hemos_enviado_un_correo_a_givaregpar_gmail_com_para_que_conozcas_todos_los_beneficios_de_tu_tarjeta"

                    android:textAppearance="@style/finalparr" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#003678"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/openRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/footer" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>